tests/baselines/reference/propertyWrappedInTry.errors.txt
==== tests/cases/compiler/propertyWrappedInTry.ts (8 errors) ====
    class Foo {
    
        try {
        ~~~
!!! propertyWrappedInTry.ts(3,5): error TS1008: Unexpected token; 'constructor, function, accessor or variable' expected.
    
            public bar = someInitThatMightFail();
            ~~~~~~
!!! propertyWrappedInTry.ts(5,9): error TS1008: Unexpected token; 'statement' expected.
                   ~~~
!!! propertyWrappedInTry.ts(5,16): error TS2095: Could not find symbol 'bar'.
                         ~~~~~~~~~~~~~~~~~~~~~
!!! propertyWrappedInTry.ts(5,22): error TS2095: Could not find symbol 'someInitThatMightFail'.
    
        } catch(e) {}
    
    
    
        public baz() {
        ~~~~~~
!!! propertyWrappedInTry.ts(11,5): error TS1008: Unexpected token; 'module, class, interface, enum, import or statement' expected.
                     ~
!!! propertyWrappedInTry.ts(11,18): error TS1005: ';' expected.
               ~~~
!!! propertyWrappedInTry.ts(11,12): error TS2095: Could not find symbol 'baz'.
    
            return this.bar; // doesn't get rewritten to Foo.bar.
    
        }
    
    }
    ~
!!! propertyWrappedInTry.ts(17,1): error TS1008: Unexpected token; 'module, class, interface, enum, import or statement' expected.
    
    